test/negative/106_empty_match.err
106_empty_match.fx:2:18: error: at least one pattern-matching case is expected
